fix: alignment of sync button (#103)

--- a/src/scss/components/_components.sidebar.scss
+++ b/src/scss/components/_components.sidebar.scss
@@ -273,7 +273,6 @@
 
   // sync
   > div:last-child {
-    padding-bottom: 0.4rem !important;
     // Maybe use this rad spinner animation (which is like the macOS notes app
     // spinner) once classnames are in place for sync states
 
